fix: Deploy linting and errors

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: 'main'
+    branches: 
+      - main
 
 jobs:
   build_site:
@@ -13,30 +14,23 @@ jobs:
 
       # If you're using pnpm, add this step then change the commands and cache key below to use `pnpm`
       - name: Install Bun
-        uses: bun/action-setup@v3
+        uses: oven-sh/setup-bun@v2
         with:
-          version: 8
-
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
- node-version: 20
- cache: npm
+          bun-version: latest
 
       - name: Install dependencies
-        run: npm i
+        run: bun i
 
       - name: build
         env:
- BASE_PATH: '/${{ github.event.repository.name }}'
-        run: |
- npm run build
-
+          BASE_PATH: '/${{ github.event.repository.name }}'
+        run: bun run build
+        
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
         with:
  # this should match the `pages` option in your adapter-static options
- path: 'build/'
+          path: 'build/'
 
   deploy:
     needs: build_site
